--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -33,7 +33,7 @@
 
       {% for tag in project.tags %}
         Tag: {{ tag.name }}
-      {% endfor }
+      {% endfor %}
 
     </div><!--//item-->
   {% endfor %}
