Testing css on tags

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -32,7 +32,7 @@
       {% endif %}
 
       {% for tag in project.tags %}
-        Tag: {{ tag.name }}
+        <div class="tag">{{ tag.name }}</div>
       {% endfor %}
 
     </div><!--//item-->
