--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -285,3 +285,10 @@ p {
   }
 }
 
+.tag {
+  font-size: 12px;
+  padding: 2px 6px;
+  border-radius: 10rem;
+  background-color: lighten($theme-color, 15%);
+  margin-right: .5rem;
+}
