--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -33,7 +33,7 @@
 
       <div>
       {% for tag in project.tags %}
-        <span class="tag">{{ tag.name }}></span>
+        <span class="tag">{{ tag.name }}</span>
       {% endfor %}
       </div>
 
