--- a/_sass/_print.scss
+++ b/_sass/_print.scss
@@ -42,4 +42,14 @@
      color: #ffffff !important;
    }
 
+   .tag {
+      font-size: 12px;
+      padding: 2px 6px;
+      border-radius: 10rem;
+      background-color: lighten($theme-color, 15%);
+      margin-right: .5rem;
+      color: white;
+    }
+    
+
 }
