--- a/_sass/_print.scss
+++ b/_sass/_print.scss
@@ -7,16 +7,16 @@
        font-size: 12pt;
     }
 
-    img.avatar {
-        filter: grayscale(1);
-        -webkit-filter: greyscale(1);
-    }
+   //  img.avatar {
+   //      filter: grayscale(1);
+   //      -webkit-filter: greyscale(1);
+   //  }
    .main-wrapper .time {
        float: right;
         color: black !important;
         -webkit-print-color-adjust: exact; 
    }
-    .sidebar-wrapper {
+    .sidebar-wrapper {  
         position: static;
         float: right;
         width: 40%;
