--- a/_sass/_print.scss
+++ b/_sass/_print.scss
@@ -32,7 +32,8 @@
     }
 
     .skillset .level-bar-inner {
-       background-color: black !important;
+      //  background-color: black !important;
+       background-color: #6c92a3 !important;
        -webkit-print-color-adjust: exact; 
     }
 
@@ -48,7 +49,7 @@
       border-radius: 10rem;
       background-color: lighten($theme-color, 15%);
       margin-right: .5rem;
-      color: white;
+      color: white !important;
     }
     
 
